--- a/public/index.html
+++ b/public/index.html
@@ -8,8 +8,8 @@
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Web site created using create-react-app" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-  <meta http-equiv="refresh" content="0; URL=https://rajatsardesai.github.io/">
-  <link rel="canonical" href="https://rajatsardesai.github.io/">
+  <meta http-equiv="refresh" content="0; URL=https://rajatsardesai.github.io/home">
+  <link rel="canonical" href="https://rajatsardesai.github.io/home">
   <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
